objects/AIA_Related_Plans__c.object
<CustomObject>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>AIA_Plan__c</referenceTo>
        <relationshipLabel>Related Plans</relationshipLabel>
        <relationshipName>Related_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Plan</label>
        <referenceTo>AIA_Plan__c</referenceTo>
        <relationshipLabel>Related Plans (Related Plan)</relationshipLabel>
        <relationshipName>Related_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Plans</label>
    <nameField>
        <displayFormat>RP-{00000000}</displayFormat>
        <label>Related Plans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>